[gd_scene load_steps=10 format=3 uid="uid://chadfqhiu5hvh"]

[ext_resource type="Script" path="res://assets/scripts/HandCrafter.gd" id="1_j0xhr"]
[ext_resource type="Script" path="res://assets/scripts/RecipeContainer.gd" id="2_elng5"]
[ext_resource type="Texture2D" uid="uid://bcqacuxdersjw" path="res://assets/sprites/MenuBG.png" id="2_q1pjt"]
[ext_resource type="Script" path="res://assets/nodes/UI/LineScrollEffect.gd" id="3_0ncir"]
[ext_resource type="Script" path="res://assets/scripts/Textbox.gd" id="3_cge41"]
[ext_resource type="Animation" uid="uid://vg1aou7xluw1" path="res://assets/animations/OpenInventory.res" id="5_cmr3i"]
[ext_resource type="AudioStream" uid="uid://bce1nit2dx8wa" path="res://assets/sound/sound_effects/CraftingFailed.wav" id="7_4x2oo"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gm4t5"]
texture = ExtResource("2_q1pjt")
expand_margin_top = 20.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qwo60"]
_data = {
"OpenHandCrafter": ExtResource("5_cmr3i")
}

[node name="HandCrafter" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(1, 1e-05)
script = ExtResource("1_j0xhr")

[node name="InventoryBackdrop" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -120.0
offset_top = -123.0
offset_right = 123.0
offset_bottom = 169.0
color = Color(0.407843, 0.552941, 0.921569, 1)

[node name="LinesMask" type="Panel" parent="."]
show_behind_parent = true
clip_contents = true
layout_mode = 0
offset_left = -120.0
offset_top = -123.0
offset_right = 123.0
offset_bottom = 124.0

[node name="Lines" type="Panel" parent="LinesMask"]
modulate = Color(1, 1, 1, 0.745098)
layout_mode = 0
offset_right = 243.0
offset_bottom = 247.0
theme_override_styles/panel = SubResource("StyleBoxTexture_gm4t5")
script = ExtResource("3_0ncir")

[node name="RecipeContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = -106.0
offset_top = -67.0
offset_right = 106.0
offset_bottom = 145.0
tooltip_text = "
"
columns = 4
script = ExtResource("2_elng5")

[node name="Search" type="LineEdit" parent="."]
layout_mode = 0
offset_left = -104.0
offset_top = -111.0
offset_right = 104.0
offset_bottom = -80.0
tooltip_text = "DEMO: 
Search not implemented"
script = ExtResource("3_cge41")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qwo60")
}
speed_scale = 2.0

[node name="CraftingResultSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4x2oo")
volume_db = -20.0
max_polyphony = 2

[connection signal="selected_crafting_slot" from="RecipeContainer" to="." method="_on_recipe_container_selected_crafting_slot"]
[connection signal="focus_entered" from="Search" to="Search" method="_on_focus_entered"]
[connection signal="mouse_entered" from="Search" to="Search" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Search" to="Search" method="_on_mouse_exited"]
